--- a/uview-ui/theme.scss
+++ b/uview-ui/theme.scss
@@ -9,10 +9,10 @@ $u-light-color: #c0c4cc;
 $u-border-color: #e4e7ed;
 $u-bg-color: #f3f4f6;
 
-$u-type-primary: #2979ff;
-$u-type-primary-light: #ecf5ff;
-$u-type-primary-disabled: #a0cfff;
-$u-type-primary-dark: #2b85e4;
+$u-type-primary: #3c2dcb;
+$u-type-primary-light: rgba(#3c2dcb, 0.1);
+$u-type-primary-disabled: rgba(#3c2dcb, 0.4);
+$u-type-primary-dark: #3c2dcb;
 
 $u-type-warning: #ff9900;
 $u-type-warning-disabled: #fcbd71;
